# uro

./: .gitignore  LICENCE  Makefile  README.md  gogo_rules.txt  install.sh  main.py  pyproject.toml  requirements.txt  test_ai.py  uro.py
.github/workflows/: ci.yml
core/: config.py  database.py  tool_wrapper.py
examples/: scope_template.txt
modules/: ai_triage.py  js_analyzer.py  prober.py  recon.py
scripts/: setup.ps1  setup.sh
src-rust/: Cargo.toml
src-rust/src/: lib.rs
tests/: conftest.py  test_delta_db.py  test_storage.py
uro/ai/: pipeline.py
uro/cli/: main.py
uro/core/: config.py  reporting.py
uro/plugins/js_analysis/: analyzer.py
uro/plugins/subdomain/: recon.py
uro/probing/: client.py
uro/storage/: repository.py
utsu/ai/: pipeline.py
utsu/cli/: main.py
utsu/core/: reporting.py
utsu/plugins/js_analysis/: analyzer.py
utsu/storage/: repository.py
