[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "utsu"
version = "0.1.0"
description = "Asymmetric attack surface management framework"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "langchain-groq",
    "langchain-core",
    "requests",
    "pyyaml"
]

[project.scripts]
# This exposes the 'utsu' command globally and points it to your CLI entrypoint
utsu = "utsu.cli.main:main"

[tool.maturin]
manifest-path = "src-rust/Cargo.toml"   # <-- ADD THIS LINE
module-name = "utsu.utsu_rust_core"
features = ["pyo3/extension-module"]